<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TokenHelper</string>
    <string name="select_account">Select Account</string>
    <string name="add_account">Add Account</string>
    <string name="get_photos_token">Get GPhotos Token</string>
    <string name="get_custom_token">Get Custom Token</string>
    <string name="no_account_selected">Please select an account first</string>
    <string name="no_microg">microG is not installed</string>
    <string name="token_copied">Token copied to clipboard</string>
    <string name="error_fetching">Error fetching token</string>
    <string name="enter_password">Enter API Password</string>
    <string name="password_hint">Password (if required)</string>
    <string name="settings">Settings</string>
</resources>
